--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <main>
 
         <!-- first-section -->
-        <!-- <section class="first-section">
+        <section class="first-section">
             <div class="cris-element">
                 <h1>Chris</h1>
                 <h3>Profeshonal UI/UX
@@ -52,7 +52,7 @@
                     molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum</p>
                 <a href="#">About me</a>
             </div>
-        </section> -->
+        </section>
         <!-- end first-section -->
 
 
