--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 
         <!-- SECTION ABOUT-ME -->
-        <!-- <section class="about-me">
+        <section class="about-me">
             <div id="about-me" class="about-me-img">
                 <img src="img/about-cris.jpg" alt="">
             </div>
@@ -92,7 +92,7 @@
                 </div>
                 <a href="#">Contact me</a>
             </div>
-        </section> -->
+        </section>
         <!-- END SECTION ABOUT-ME -->
 
         <!-- SECTION MY-SERVICES -->
