--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <!-- END SECTION ABOUT-ME -->
 
         <!-- SECTION MY-SERVICES -->
-        <!-- <section class="my-services">
+        <section class="my-services">
             <h4>My Services</h4>
             <hr>
             <div id="service" class="my-services-grid-elements">
@@ -131,12 +131,12 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. MaximeLorem ipsum dolor sit amet consectetur adipisicing elit. </p>
                 </div>
             </div>
-        </section> -->
+        </section>
         <!-- END SECTION MY-SERVICES -->
 
 
         <!-- SECTION PORTFOLIO -->
-        <!-- <section id="portfolio" class="portfolio-section">
+        <section id="portfolio" class="portfolio-section">
             <h4>Portfolio</h4>
             <hr>
             <div class="portfolio-addon">
@@ -157,7 +157,7 @@
                     <div class="portfolio-item" data-category="web-app">Веб-приложение-5</div>
                   </div>
             </div>
-        </section> -->
+        </section>
         <!-- END SECTION PORTFOLIO -->
 
 
