--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
 
         <!-- SECTION CONTACT-ME -->
-        <!-- <section id="contact" class="contact-me">
+        <section id="contact" class="contact-me">
             <h4>Contact Me</h4>
             <hr>
             <div class="contact-me-blocks">
@@ -185,7 +185,7 @@
                     </form>
                 </div>
             </div>
-        </section> -->
+        </section>
         <!-- END SECTION CONTACT ME -->
 
         
