--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
 
     <!-- FOOTER -->
-    <!-- <footer>
+    <footer>
         <div class="footer-content">
             <div class="social">
                 <img src="img/fb.svg" alt="">
@@ -206,7 +206,7 @@
                 <p>©2022 All rights reserved by - Morsalin Nur</p>
             </div>
         </div>
-    </footer> -->
+    </footer>
     <!-- END FOOTER -->
      </div>
 
